Klar med task 1

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 148,
    "id": "cb632103",
    "metadata": {},
    "outputs": [],
    "source": [
     "import duckdb\n",
     "from pathlib import Path\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -479,7 +480,7 @@
     "    t1b = conn.execute(\"\"\"\n",
     "SELECT title, rating, length, description\n",
     "FROM film\n",
-    "WHERE lower( title) LIKE '%love%'\n",
+    "WHERE lower(title) LIKE '%love%'\n",
     "\"\"\").df()\n",
     "\n",
     "t1b\n"
@@ -542,7 +543,7 @@
    ],
    "source": [
     "#task 1c\n",
-    "with duckdb.connect('sakila_duck.db') as conn:\n",
+    "with duckdb.connect(duckdb_path) as conn:\n",
     "    t1c = conn.execute(\"\"\"\n",
     "    SELECT \n",
     "        MIN(length) as kortast,\n",
@@ -561,26 +562,655 @@
    "execution_count": null,
    "id": "2c7746ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>cost_per_day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BACKLASH UNDEFEATED</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BILKO ANONYMOUS</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BEAST HUNCHBACK</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AUTUMN CROW</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ACE GOLDFINGER</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CARIBBEAN LIBERTY</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>BEHAVIOR RUNAWAY</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CASPER DRAGONFLY</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AMERICAN CIRCUS</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CASUALTIES ENCINO</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 title  cost_per_day\n",
+       "0  BACKLASH UNDEFEATED          1.66\n",
+       "1      BILKO ANONYMOUS          1.66\n",
+       "2      BEAST HUNCHBACK          1.66\n",
+       "3          AUTUMN CROW          1.66\n",
+       "4       ACE GOLDFINGER          1.66\n",
+       "5    CARIBBEAN LIBERTY          1.66\n",
+       "6     BEHAVIOR RUNAWAY          1.66\n",
+       "7     CASPER DRAGONFLY          1.66\n",
+       "8      AMERICAN CIRCUS          1.66\n",
+       "9    CASUALTIES ENCINO          1.66"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "#task D\n",
+    "with duckdb.connect(duckdb_path) as conn:\n",
+    "    t1d = conn.execute (\"\"\"\n",
+    "SELECT \n",
+    " title,\n",
+    " ROUND(rental_rate / rental_duration, 2) as cost_per_day\n",
+    "FROM film \n",
+    "ORDER BY cost_per_day DESC \n",
+    "LIMIT 10;\n",
+    "\"\"\").df()\n",
+    "\n",
+    "t1d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "f95e3de2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actor_name</th>\n",
+       "      <th>movies_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GINA DEGENERES</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WALTER TORN</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MARY KEITEL</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MATTHEW CARREY</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SANDRA KILMER</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>SCARLETT DAMON</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>HENRY BERRY</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>VAL BOLGER</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ANGELA WITHERSPOON</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>VIVIEN BASINGER</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           actor_name  movies_count\n",
+       "0      GINA DEGENERES            42\n",
+       "1         WALTER TORN            41\n",
+       "2         MARY KEITEL            40\n",
+       "3      MATTHEW CARREY            39\n",
+       "4       SANDRA KILMER            37\n",
+       "5      SCARLETT DAMON            36\n",
+       "6         HENRY BERRY            35\n",
+       "7          VAL BOLGER            35\n",
+       "8  ANGELA WITHERSPOON            35\n",
+       "9     VIVIEN BASINGER            35"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#TASK f\n",
+    "\n",
+    "with duckdb.connect(duckdb_path) as conn:\n",
+    "    t1f = conn.execute (\"\"\"\n",
+    "    SELECT \n",
+    "    a.first_name || ' ' || a.last_name as actor_name, \n",
+    "    COUNT(fa.film_id) as movies_count\n",
+    "FROM actor a\n",
+    "JOIN film_actor fa ON a.actor_id = fa.actor_id\n",
+    "GROUP BY a.actor_id, a.first_name, a.last_name\n",
+    "ORDER BY movies_count DESC\n",
+    "LIMIT 10;\n",
+    "\"\"\").df()\n",
+    "\n",
+    "t1f\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c1e9ce3",
+   "metadata": {},
+   "source": [
+    "# Egna Frågor "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "8a68f851",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Hur många filmer i varje kategori?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kategori</th>\n",
+       "      <th>antal_filmer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sports</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Foreign</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Family</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Animation</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>New</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Drama</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Games</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Children</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Classics</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Horror</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Music</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       kategori  antal_filmer\n",
+       "0        Sports            74\n",
+       "1       Foreign            73\n",
+       "2        Family            69\n",
+       "3   Documentary            68\n",
+       "4     Animation            66\n",
+       "5        Action            64\n",
+       "6           New            63\n",
+       "7         Drama            62\n",
+       "8         Games            61\n",
+       "9        Sci-Fi            61\n",
+       "10     Children            60\n",
+       "11       Comedy            58\n",
+       "12       Travel            57\n",
+       "13     Classics            57\n",
+       "14       Horror            56\n",
+       "15        Music            51"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"1. Hur många filmer i varje kategori?\")\n",
+    "\n",
+    "with duckdb.connect(duckdb_path) as conn:\n",
+    " Antal_filmer = conn.execute(\"\"\"\n",
+    "SELECT name as kategori, COUNT(*) as antal_filmer\n",
+    "FROM category \n",
+    "JOIN film_category ON category.category_id = film_category.category_id\n",
+    "GROUP BY name\n",
+    "ORDER BY antal_filmer DESC;\n",
+    "\"\"\").df()\n",
+    "\n",
+    "Antal_filmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "1adad631",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Vilka skådespelare har namn som börjar på A?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ADAM</td>\n",
+       "      <td>GRANT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ADAM</td>\n",
+       "      <td>HOPPER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>GARLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ALAN</td>\n",
+       "      <td>DREYFUSS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ALBERT</td>\n",
+       "      <td>NOLTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ALBERT</td>\n",
+       "      <td>JOHANSSON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ALEC</td>\n",
+       "      <td>WAYNE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ANGELA</td>\n",
+       "      <td>HUDSON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ANGELA</td>\n",
+       "      <td>WITHERSPOON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ANGELINA</td>\n",
+       "      <td>ASTAIRE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>ANNE</td>\n",
+       "      <td>CRONYN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>AUDREY</td>\n",
+       "      <td>OLIVIER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>AUDREY</td>\n",
+       "      <td>BAILEY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first_name    last_name\n",
+       "0        ADAM        GRANT\n",
+       "1        ADAM       HOPPER\n",
+       "2          AL      GARLAND\n",
+       "3        ALAN     DREYFUSS\n",
+       "4      ALBERT        NOLTE\n",
+       "5      ALBERT    JOHANSSON\n",
+       "6        ALEC        WAYNE\n",
+       "7      ANGELA       HUDSON\n",
+       "8      ANGELA  WITHERSPOON\n",
+       "9    ANGELINA      ASTAIRE\n",
+       "10       ANNE       CRONYN\n",
+       "11     AUDREY      OLIVIER\n",
+       "12     AUDREY       BAILEY"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\" Vilka skådespelare har namn som börjar på A?\")\n",
+    "\n",
+    "with duckdb.connect(duckdb_path) as conn:\n",
+    "    skådespelare_a = conn.execute(\"\"\"\n",
+    "SELECT first_name, last_name \n",
+    "FROM actor \n",
+    "WHERE first_name LIKE 'A%'\n",
+    "ORDER BY first_name;\n",
+    "\"\"\").df()\n",
+    "\n",
+    "skådespelare_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "eaeee7bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Vilka är de 5 kortaste filmerna?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>film</th>\n",
+       "      <th>minuter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ALIEN CENTER</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IRON MOON</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KWAI HOMEWARD</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LABYRINTH LEAGUE</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RIDGEMONT SUBMARINE</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  film  minuter\n",
+       "0         ALIEN CENTER       46\n",
+       "1            IRON MOON       46\n",
+       "2        KWAI HOMEWARD       46\n",
+       "3     LABYRINTH LEAGUE       46\n",
+       "4  RIDGEMONT SUBMARINE       46"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\" Vilka är de 5 kortaste filmerna?\")\n",
+    "with duckdb.connect(duckdb_path) as conn:\n",
+    "    kortaste_filmer = conn.execute(\"\"\"\n",
+    "SELECT \n",
+    "    title as film,\n",
+    "    length as minuter\n",
+    "FROM film \n",
+    "ORDER BY length ASC \n",
+    "LIMIT 5;\n",
+    "\"\"\").df()\n",
+    "kortaste_filmer"
+   ]
   }
  ],
  "metadata": {
