--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 248,
    "id": "e457997c",
    "metadata": {},
    "outputs": [],
@@ -36,8 +36,7 @@
     "with duckdb.connect(duckdb_path) as conn, open(\"sql/load_sakila.sql\") as ingest_scripts:\n",
     "    conn.sql(ingest_scripts.read())\n",
     "    # create pandas dataframes from the created duckdb connection\n",
-    "    description = conn.sql(\"DESC;\").df()\n",
-    "    "
+    "    description = conn.sql(\"DESC;\").df()\n"
    ]
   },
   {
@@ -50,10 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 269,
    "id": "5a9c222f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " filmer som är längre än 180 minuter\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -322,7 +328,7 @@
        "38      YOUNG LANGUAGE     183"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,13 +337,13 @@
     "#task 1 a\n",
     "with duckdb.connect(duckdb_path) as conn:\n",
     "    t1a = conn.execute(\"SELECT title, length FROM film WHERE length > 180\").df() \n",
-    "\n",
+    "    print(\" filmer som är längre än 180 minuter\")\n",
     "t1a\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 274,
    "id": "a870f3d8",
    "metadata": {},
    "outputs": [
@@ -469,19 +475,21 @@
        "9  A Awe-Inspiring Panorama of a Lumberjack And a...  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#task 1b\n",
+    "#task B\n",
     "with duckdb.connect(duckdb_path) as conn:\n",
     "    t1b = conn.execute(\"\"\"\n",
     "SELECT title, rating, length, description\n",
     "FROM film\n",
-    "WHERE lower(title) LIKE '%love%'\n",
+    "WHERE REGEXP_MATCHES(title, '(?i)love')\n",
+    "ORDER BY title;\n",
     "\"\"\").df()\n",
+    "\n",
     "\n",
     "t1b\n"
    ]
@@ -559,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 265,
    "id": "2c7746ce",
    "metadata": {},
    "outputs": [
@@ -657,7 +665,7 @@
        "9    CASUALTIES ENCINO          1.66"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 264,
    "id": "f95e3de2",
    "metadata": {},
    "outputs": [
@@ -704,45 +712,45 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>actor_name</th>\n",
-       "      <th>movies_count</th>\n",
+       "      <th>skådespelare</th>\n",
+       "      <th>antal_filmer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>SUSAN DAVIS</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>GINA DEGENERES</td>\n",
        "      <td>42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>WALTER TORN</td>\n",
        "      <td>41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>MARY KEITEL</td>\n",
        "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>MATTHEW CARREY</td>\n",
        "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>SANDRA KILMER</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>SCARLETT DAMON</td>\n",
        "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>HENRY BERRY</td>\n",
-       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -756,7 +764,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>VIVIEN BASINGER</td>\n",
+       "      <td>UMA WOOD</td>\n",
        "      <td>35</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -764,40 +772,39 @@
        "</div>"
       ],
       "text/plain": [
-       "           actor_name  movies_count\n",
-       "0      GINA DEGENERES            42\n",
-       "1         WALTER TORN            41\n",
-       "2         MARY KEITEL            40\n",
-       "3      MATTHEW CARREY            39\n",
-       "4       SANDRA KILMER            37\n",
-       "5      SCARLETT DAMON            36\n",
-       "6         HENRY BERRY            35\n",
+       "         skådespelare  antal_filmer\n",
+       "0         SUSAN DAVIS            54\n",
+       "1      GINA DEGENERES            42\n",
+       "2         WALTER TORN            41\n",
+       "3         MARY KEITEL            40\n",
+       "4      MATTHEW CARREY            39\n",
+       "5       SANDRA KILMER            37\n",
+       "6      SCARLETT DAMON            36\n",
        "7          VAL BOLGER            35\n",
        "8  ANGELA WITHERSPOON            35\n",
-       "9     VIVIEN BASINGER            35"
+       "9            UMA WOOD            35"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#TASK f\n",
+    "# task 1 E\n",
     "with duckdb.connect(duckdb_path) as conn:\n",
-    "    t1f = conn.execute (\"\"\"\n",
+    "    task1e = conn.execute(\"\"\"\n",
     "    SELECT \n",
-    "    a.first_name || ' ' || a.last_name as actor_name, \n",
-    "    COUNT(fa.film_id) as movies_count\n",
-    "FROM actor a\n",
-    "JOIN film_actor fa ON a.actor_id = fa.actor_id\n",
-    "GROUP BY a.actor_id, a.first_name, a.last_name\n",
-    "ORDER BY movies_count DESC\n",
-    "LIMIT 10;\n",
-    "\"\"\").df()\n",
+    "        a.first_name || ' ' || a.last_name AS skådespelare, \n",
+    "        COUNT(*) as antal_filmer\n",
+    "    FROM actor a\n",
+    "    JOIN film_actor fa ON a.actor_id = fa.actor_id\n",
+    "    GROUP BY skådespelare\n",
+    "    ORDER BY antal_filmer DESC\n",
+    "    LIMIT 10;\n",
+    "    \"\"\").df()\n",
     "\n",
-    "t1f\n",
-    "\n"
+    "task1e\n"
    ]
   },
   {
@@ -1342,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 276,
    "id": "00a7a56c",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1500,7 @@
        "15        Music         3417.72"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1527,7 @@
     "\"\"\").df()\n",
     "\n",
     "\n",
-    "plt.bar(data['kategori'], data['total_intäkter'], color='green')\n",
+    "plt.bar(task_intäkter['kategori'], task_intäkter['total_intäkter'], color='green')\n",
     "plt.title('Totala intäkter per filmkategori')\n",
     "plt.xlabel('Kategori')\n",
     "plt.ylabel('Totala intäkter ($)')\n",
